--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ canvas { display: block; }
 </style>
 </head>
 <body>
+  <h1>Nama Kelompok</h1>
+	<h3>1. Agi Warkio<br>2. Robiul Wandani</h3>
   <audio src="assets/backsound.mp3" autoplay="autoplay" loop=""></audio>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.6.2/phaser.min.js"></script>
 <script src="js/game.js"></script>
