--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
 * { margin: 0; padding: 0; }
 body { background: #6b92b9; }
 canvas { display: block; }
+h1{font-size: 25px;font-style: bold;}
+h3{font-size: 20px; font-style: normal;}
+a{text-decoration: none; color: black;font-size: 20px;}
 </style>
 </head>
 <body>
   <h1>Nama Kelompok</h1>
 	<h3>1. Agi Warkio<br>2. Robiul Wandani</h3>
+	<h1>Credit</h1>
+	<a href="https://en.wikipedia.org/wiki/File:Soccer_ball.svg">1. Bola</a><br>
+	<a href="https://gr.depositphotos.com/68613489/stock-photo-texture-background-of-fresh-green.html">2. Latar Belakang</a><br>
+	<a href="https://audiojungle.net/item/quirky-bright-and-fun/10816429?s_rank=14&_ga=2.72977875.1347994216.1531999007-1444154500.1530966853">3. Musik</a>
   <audio src="assets/backsound.mp3" autoplay="autoplay" loop=""></audio>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.6.2/phaser.min.js"></script>
 <script src="js/game.js"></script>
